Fix nav-bar padding on mobile

--- a/main.css
+++ b/main.css
@@ -356,4 +356,9 @@ input {
     .form-div {
         width: 80%;
     }
+
+
+    li a {
+        padding: 22px 12px;
+    }
 }
